crates/nash-parse/src/expression/snapshots/nash_parse__expression__number__tests__error_hex_no_digits.snap
---
source: crates/nash-parse/src/expression/number.rs
description: "Code:\n\n0x"
---
Number(
    HexDigit,
    1,
    3,
)
