crates/nash-parse/src/expression/snapshots/nash_parse__expression__number__tests__error_leading_zero.snap
---
source: crates/nash-parse/src/expression/number.rs
description: "Code:\n\n007"
---
Number(
    NoLeadingZero,
    1,
    2,
)
