crates/nash-parse/src/expression/snapshots/nash_parse__expression__number__tests__int_simple.snap
---
source: crates/nash-parse/src/expression/number.rs
description: "Code:\n\n42"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Int(
        42,
    ),
}
